# zknft

./: .gitignore  Cargo.toml  IDENTITY  LOG  README.md
avail/: Cargo.toml
avail/src/: avail.rs  lib.rs  service.rs
avail/src/spec/: transaction.rs
cli/: Cargo.toml
core/: Cargo.toml
core/src/: app_node cop2.rs  app_node.rs  db.rs  errors.rs  lib.rs  native_storage.rs  native_store.rs  state_machine.rs  traits.rs  types.rs  utils.rs  zk_storage.rs  zkvm_state_machine.rs
core/src/nft/: mod.rs  state_machine.rs  state_transition.rs  types.rs  zkvm_state_machine.rs
core/src/payments/: mod.rs  state_machine.rs  state_transition.rs  types.rs  zkvm_state_machine.rs
core/src/state/: merkle_store.rs  mod.rs  state.rs  vm_state.rs
host/: Cargo.toml
host/src/: main.rs
marketplace/: Cargo.toml
marketplace/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
nexus/: Cargo.toml  Dockerfile  Makefile  README.md  entrypoint.sh
nexus/src/: errors.rs  main.rs  nexus_app.rs  store.rs  types.rs
nft-ui/: .env.example  next.config.js  package-lock.json  package.json
nft-ui/app/: layout.tsx  page.tsx
nft-ui/components/: carousel.tsx  price.tsx
nft-ui/components/grid/: three-items.tsx  tile.tsx
nft-ui/components/icons/: logo.tsx
nft-ui/components/layout/: footer-menu.tsx  footer.tsx  product-grid-items.tsx
nft-ui/components/layout/navbar/: mobile-menu.tsx
nft-ui/components/modals/: BuyNftModal.tsx  ModalWrapper.tsx
nft-ui/lib/zknft/: index.ts  types.ts  utils.ts
nft_app/host/: Cargo.toml  serialized_data.json
nft_app/host/src/: main.rs  rpc_endpoints.rs  types.rs
nft_app/methods/: Cargo.toml
nft_app/methods/guest/: Cargo.toml
nft_app/methods/guest/src/: main.rs
payments-ui/: package-lock.json  package.json  tsconfig.json
payments-ui/app/: globals.css  page.tsx
payments-ui/app/select_address/: page.tsx
payments-ui/lib/zknft/: index.ts  types.ts  utils.ts
payments_app/host/: Cargo.toml
payments_app/host/src/: main.rs  rpc_endpoints.rs  types.rs
payments_app/methods/: Cargo.toml
payments_app/methods/guest/: Cargo.toml
payments_app/methods/guest/src/: main.rs
rollup-interface/: Cargo.toml
ui/: next.config.js  package-lock.json  package.json
ui/components/: carousel.tsx
ui/components/layout/: footer.tsx
ui/components/layout/navbar/: index.tsx  search.tsx
ui/lib/zknft/: index.ts  types.ts
