[workspace]
members = [
    "nft_app/host",
    "nft_app/methods",
    "core", 
    "payments_app/host",
    "payments_app/methods",
    "avail"
]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
