[package]
name = "avail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { version = "0.10.3", features = ["rc", "bytes"] }
bytes = { version = "1.2.1", features = ["serde"]}
primitive-types = { version = "0.12.1", features = ["serde"]}
sp-core-hashing = "10.0.0"
subxt = { version = "0.29", optional = true }
avail-subxt = { git = "https://github.com/availproject/avail.git", tag = "v1.6.3", features = ["std"], optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"], optional = true }

#Convenience
tokio = { version = "1", features = ["full"], optional = true }
anyhow = "1.0.68"
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.11", features = ["json"], optional = true }
thiserror = "1.0.38"
sp-keyring = { version = "24", optional = true }
sp-core = { version = "21", optional = true }

[features]
default = ["native"]
native = ["dep:tokio", "dep:codec", "dep:reqwest", "dep:avail-subxt", "dep:subxt", "dep:sp-keyring", "dep:sp-core"]
verifier = []
