[package]
name = "nft_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
risc0-zkvm = {version = "0.16.1", optional = true, default-features = false }
bincode = "1.3.3"
primitive-types = { version = "0.12.1", optional = true, default-features = false, features = ["serde"] }
rocksdb = { version = "0.21.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
sparse-merkle-tree = { path = "../../sparse-merkle-tree", optional = true, default-features = false }
thiserror = "1.0.44"

[features]
default = ["zkvm"]
native = ["rocksdb", "sparse-merkle-tree/arch-64", "sparse-merkle-tree/std", "primitive-types/std", "primitive-types/serde", "risc0-zkvm/default"]
zkvm = ["sparse-merkle-tree/arch-32", "sparse-merkle-tree/std", "primitive-types", "primitive-types/serde", "risc0-zkvm/std"]
