[package]
name = "nft_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
risc0-zkvm = {version = "0.18.0", optional = true, default-features = false }
bincode = "1.3.3"
primitive-types = { version = "0.12.1", optional = true, default-features = false, features = ["serde"] }
rocksdb = { version = "0.21.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
sparse-merkle-tree = { git = "https://github.com/vibhurajeev/sparse-merkle-tree.git", optional = true, default-features = false }
thiserror = "1.0.44"
serde_json = "1.0.103"
risc0-zkp = {version = "0.18.0", optional = true}
avail = { path = "../avail", optional = true, default-feature = false }
flate2 = "1.0"

#HTTP client
hyper = { version = "0.14.23", optional = true, features = ["server"]}
tokio = { version = "1", features = ["full"], optional = true }
actix-web = { version = "4.3.1", optional = true }
reqwest = { version = "0.11.20", optional = true }
hex = "0.4.3"
sha2 = "0.10.7"
ed25519-consensus = "2.1.0"
serde-big-array = "0.5.1"
anyhow = "1.0.75"
warp = { version = "0.3.6", optional = true }
http = { version = "0.2.9", optional = true }
parity-scale-codec = { version = "3.6.5", features = ["derive"]}

[features]
default = ["zkvm"]
native = ["rocksdb", "sparse-merkle-tree/arch-64", "sparse-merkle-tree/std", "primitive-types/std", "primitive-types/serde", "risc0-zkvm/default", "risc0-zkp", "avail/native", "hyper", "tokio", "actix-web", "reqwest", "warp", "http"]
native-metal = ["rocksdb", "sparse-merkle-tree/arch-64", "sparse-merkle-tree/std", "primitive-types/std", "primitive-types/serde", "risc0-zkvm/metal", "risc0-zkp", "avail/native", "hyper", "tokio", "actix-web", "reqwest", "warp", "http"]
zkvm = ["sparse-merkle-tree/arch-32", "sparse-merkle-tree/std", "primitive-types", "primitive-types/serde", "risc0-zkvm/std"]
