[package]
name = "marketplace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
nft_core = { path = "../core", features = ["native"] }
reqwest = "0.11.20"
tokio = "1.32.0"
serde_json = "1.0.105"
sparse-merkle-tree = { path = "../../sparse-merkle-tree" }
primitive-types = { version = "0.12.1", default-features = false, features = ["serde"] }
serde = "1.0.188"
futures = "0.3.28"
hex = "0.4.3"
serde_urlencoded = "0.7.1"
rand = "0.8.5"
sha2 = "0.10.7"
ed25519-consensus = "2.1.0"
anyhow = "1.0.75"
