[package]
name = "nexus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sparse-merkle-tree = { path = "../../sparse-merkle-tree" }
nft_core = { path = "../core", features = ["native"] }
actix-web = "4.3.1"
tokio = "1.30.0"
nft-methods = { path = "../nft_app/methods" }
payments-methods = { path = "../payments_app/methods" }
risc0-zkvm = {version = "0.16.1"}
serde = "1.0"
primitive-types = "0.12.1"
hex = "0.4.3"
avail = { path = "../avail" }
serde_json = "1.0.103"
bincode = "1.3.3"
