[package]
name = "transfer"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.15.3", default-features = false, features = [ "std" ] }
nft_core = { path = "../../core" }
rs_merkle = "1.4.1"
serde_json = "1.0.97"
