[package]
name = "nft-host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "0.18.0", default-features = false, features = ["metal"] }
serde = "1.0"
nft_core = { path = "../../core", features = ["native-metal"] }
primitive-types = "0.12.1"
nft-methods = { path = "../methods" }
sparse-merkle-tree = { path = "../../../sparse-merkle-tree" }
tokio = "1.30.0"
