[package]
name = "nft-host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "0.18.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
nft_core = { path = "../../core", features = ["native"] }
primitive-types = { version = "0.12.1", default-features = false, features = ["serde"] }
nft-methods = { path = "../methods" }
sparse-merkle-tree = { git = "https://github.com/vibhurajeev/sparse-merkle-tree.git" }
tokio = "1.30.0"
actix-web = "4.3.1"
serde_json = "1.0.107"
warp = "0.3.6"
ed25519-consensus = "2.1.0"
anyhow = "1.0.75"
reqwest = "0.11.22"
