[package]
name = "payments-host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "0.18.0" }
serde = "1.0"
nft_core = { path = "../../core", features = ["native"] }
primitive-types = "0.12.1"
payments-methods = { path = "../methods" }
sparse-merkle-tree = { git = "https://github.com/vibhurajeev/sparse-merkle-tree.git" }
tokio = "1.30.0"
warp = "0.3.6"
parity-scale-codec = "3.6.5"
serde-big-array = "0.5.1"
anyhow = "1.0.75"
